# PALinux

./: Makefile  README.md  config
analyzer/: README.md  extract_top.py  get_div.py  stat.py
analyzer/analyzer-tool/: CMakeLists.txt  analyzer.cpp  build.sh  clean.sh
analyzer/prebuilt/: vmlinux-diversity-score.csv
artifact-paper/: Makefile  ae.tex
artifact-paper/code/: install.sh
benchmark/: README.md  README_QEMU.md  run-m1-linux.sh  run-qemu-linux.sh
benchmark/m1/kernel/: t8103-j274.dtb
full-workflow/: README.md
gcc/gcc/: cfgexpand.c  function.c
linux/: Makefile  gen_bc.sh
linux/crypto/: drbg.c
linux/drivers/base/: component.c  devres.c
linux/drivers/pci/: quirks.c
linux/include/drm/: drm_panel.h
linux/include/linux/: clk-provider.h  compiler.h  compiler_types.h  cpuidle.h  device.h  dma-fence.h  dmaengine.h  (+19 more)
linux/init/: main.c
linux/ipc/: msgutil.c
linux/kernel/: fork.c  smp.c
linux/security/: Kconfig
precision/: README.md  graph.csv  result.csv
precision/pal-dump-results/: pal_dump_objbind.txt  pal_dump_objbind_retbind.txt  pal_dump_objtype.txt  pal_dump_typesig.txt
precision/scripts/: csv-for-graph.py  dump-to-csv.py  print-percent.py
qemu/: .gitignore
static-validator/: .gitattributes  README.md  static-validator.py
static-validator/confirmed-case/: ios.md  pal-dev.md  parts.md
xcfi/: .gitignore  Makefile  README.md
xcfi/gcc-plugin/: Makefile  main.cc  preference.cc  preference.h  xcfi.h
xcfi/pacbench/: .gitignore  Makefile  feature.c  instruction.c  keychange.c  main.c  measure.h  pacbench.h
xcfi/test/: Makefile
(+102 files in other folders)
